objects/IPM_Account_WIC_Code__c.object
<CustomObject>
    <description>Junction object between Account and WIC Code</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WIC Codes</relationshipLabel>
        <relationshipName>Account_WIC_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_WIC_Code_Description__c</fullName>
        <formula>IPM_WIC_Code__r.IPM_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIC Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_WIC_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WIC Code</label>
        <referenceTo>IPM_WIC_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_WIC_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account WIC Code</label>
    <nameField>
        <displayFormat>AWC-{000000000}</displayFormat>
        <label>Account WIC Codes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account WIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>